--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -589,13 +589,12 @@ html, body {
     }
   }
 }
-
-/// testimoniallllllll start 
 .testimonial-slider {
   background: linear-gradient(to right, #424748, #0d3667);
   padding: 3rem 1rem;
   text-align: center;
   user-select: none;
+  width: 100%; // Ensure full width
 
   .header {
     margin-bottom: 2rem;
@@ -605,7 +604,7 @@ html, body {
       font-weight: bold;
 
       .highlight {
-        color:burlywood;
+        color: burlywood;
       }
 
       .underline {
@@ -621,8 +620,7 @@ html, body {
 
   .slider-wrapper {
     overflow: hidden;
-    max-width: 1100px;
-    margin: 0 auto;
+    width: 100%; // Full screen width
     cursor: grab;
 
     &:active {
