--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -918,3 +918,84 @@ html, body {
     }
   }
 }
+
+
+// industries 
+
+.industries-section {
+  background-color: #121212;
+  padding: 4rem 1rem;
+
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .section-title {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    position: relative;
+    margin-bottom: 3rem;
+
+    .underline {
+      display: inline-block;
+      height: 4px;
+      width: 60px;
+      background:  #fff;
+      margin-left: 10px;
+      vertical-align: middle;
+    }
+  }
+
+  .card-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 2rem;
+  }
+
+  .industry-card {
+    background: #1f1f1f;
+    color: burlywood;
+    padding: 1.5rem;
+    border-radius: 15px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+    text-align: left;
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: translateY(-5px);
+    }
+
+    img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+      height: 200px;
+      object-fit: cover;
+    }
+
+    h3 {
+      font-size: 1.25rem;
+      font-weight: 600;
+      margin-bottom: 0.75rem;
+    }
+
+    p {
+      font-size: 0.95rem;
+      color:  #ccc;
+      margin-bottom: 1rem;
+    }
+
+    .read-more {
+      color: #d91921;
+      font-weight: bold;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
