Updated path issue on vue js resourse repository

--- a/resources/sass/contact.scss
+++ b/resources/sass/contact.scss
@@ -1,15 +1,17 @@
  
 $primary-color: #eaeef3;
 $accent-color: #1f2937;
-$back:linear-gradient(to right, #424748, #0d3667);
-
+$back: linear-gradient(to right, #424748, #0d3667);
 $front:linear-gradient(to right, #0f2027, #203a43, #2c5364);
 
 
-
-.container {
-    font-family: 'Inter', sans-serif;
-    background-color: $back ; 
-    color: $primary-color;
-    user-select: none; // ← This disables text selection
-  }
+body {
+  font-family: 'Inter', sans-serif;
+  background: $back ;  
+  user-select: none; // ← This disables text selection
+}
+.container{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1623px;
+}
